<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivitySettings" >

    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
  		android:shrinkColumns="0">
  		
        <TableRow >
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_sensor_delay"
		        android:gravity="right"
		        android:layout_gravity="center_vertical|right"/>

			<SeekBar
			    android:id="@+id/seekBar_sensor_delay"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" />
				
		</TableRow>
		
        
        <TableRow >
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_interval"
		        android:gravity="right"
		        android:layout_gravity="center_vertical|right"/>
				
			<EditText 
			    android:id="@+id/edit_interval"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:minWidth="200dp"
		        android:singleLine="true"
		        android:maxLength="10"
		        android:inputType="numberDecimal"
            	android:hint="@string/hint_interval"/>
		</TableRow>
		
        <TableRow>
            <CheckBox 
                android:layout_column="1" 
                android:id="@+id/check_auto_track"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/check_auto_update"/>
        </TableRow>
        
	</TableLayout>
	
    <Button
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_apply" />

</LinearLayout>