<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/shape_pop_background"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button 
            android:id="@+id/btn_check_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_check_all"
            android:layout_weight="1"
            style="@style/font_pop_btn"/>
        
        <Button 
            android:id="@+id/btn_uncheck_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_uncheck_all"
            android:layout_weight="1"
            style="@style/font_pop_btn"/>
    </LinearLayout>
    
    <CheckBox 
        android:layout_margin="10dp"
        android:id="@+id/checkbox_label_visibility"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_label_visibility"
        style="@style/font_pop_btn"/>
    
    <LinearLayout
        android:id="@+id/field_layer_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"/>
    

</LinearLayout>